--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= link_to "heyo", heyo_path %>
+<%= link_to "Home", root_path %>
 <%= yield %>
 
 </body>
