--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,17 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <meta name="viewport" content="width=device‐width, initial‐scale=1.0">
 </head>
 <body>
-<%= link_to "heyo", heyo_path %>
-<%= link_to "Home", root_path %>
-<%= yield %>
-</div>
+<li><%= link_to "Home", root_path %></li>
+<li><%= link_to "heyo", heyo_path %></li>
+<%= render 'layouts/header' %>
+
+  <div class="container">
+  <%= yield %>
+  </div>
 
 </body>
 </html>
