--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Myapp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <title>Test Prep</title>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
   <meta name="viewport" content="width=device‐width, initial‐scale=1.0">
 </head>
+
 <body>
-<li><%= link_to "Home", root_path %></li>
-<li><%= link_to "heyo", heyo_path %></li>
+
+
 <%= render 'layouts/header' %>
 
-  <div class="container">
+<%= link_to "Home", root_path %>
+<%= link_to "About Us", about_path %>
+<div class="container">
   <%= yield %>
-  </div>
+</div>
 
 </body>
 </html>
