--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,6 @@
-
 <div class="jumbotron">
-  <h1>Welcome to my app!</h1>
+
+  <h1>Welcome to Test Prep!</h1>
+
   Click here to <%= link_to "Sign Up", "#", class: "btn btn‐primary" %>
 </div>
-<h1>Hey guys!</h1>
-
-
-<p>Sign up <%= link_to "here", "#" %>.</p>
