--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,5 @@
 
   <h1>Welcome to Test Prep!</h1>
 
-  Click here to <%= link_to "Sign Up", "#", class: "btn btn‐primary" %>
+  Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
 </div>
