--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,20 @@
-<nav class="navbar navbar-inverse navbar‐default" role="navigation">
-  <!‐‐ Brand and toggle get grouped for better mobile display ‐‐>
-  <div class="navbar‐header">
-    <button type="button" class="navbar‐toggle" data‐toggle="collapse" data‐target=".navbar‐ex1-collapse">
-      <span class="sr‐only">Toggle navigation</span>
-    <span class="icon‐bar"></span>
-    <span class="icon‐bar"></span>
-    <span class="icon‐bar"></span>
+<nav class="navbar navbar-inverse navbar-default" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      
+      <span class="sr-only">Toggle navigation</span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
     </button>
-    <a class="navbar‐brand" href="#">Test Prep</a>
+    <a class="navbar-brand" href="#">Test Prep</a>
   </div>
-  <!‐‐ Collect the nav links, forms, and other content for toggling ‐‐>
-  <div class="collapse navbar‐collapse navbar‐ex1‐collapse">
-    <ul class="nav navbar‐nav navbar‐right">
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Home", root_path %></li>
+      
     </ul>
-  </div><!‐‐ /.navbar‐collapse ‐‐>
+  </div><!-- /.navbar-collapse -->
 </nav>
