--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 
   <h1>Welcome to Test Prep!</h1>
-
+  Click here to <%= link_to "Log in", "#", class: "btn btn-primary" %>
   Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
 </div>
