Implemented Devise for Users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Test Prep</title>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +17,10 @@
 <%= link_to "Home", root_path %>
 <%= link_to "About Us", about_path %>
 <div class="container">
+  <% flash.each do |name, msg| %>
+      <p class="alert"><%= alert %></p>
+  <%end%>
+
   <%= yield %>
 </div>
 
